Still trying to fix the alert pop up on mobile.

--- a/style.css
+++ b/style.css
@@ -107,8 +107,11 @@
     border: 0;
     padding: 0;
     margin: 0;
-    inline-size: auto;
     transition: all 0.2s ease-in-out;
+}
+.icon-alert.alert-dismissible .close {
+    top: -2px;
+    left: -21px;
 }
 .icon-alert *  {
     height: 0;
@@ -117,7 +120,7 @@
 }
 .icon-alert.fade.in {
     height: 100%;
-    padding: 15px 35px 15px 0px;
+    padding: 15px 0px;
     margin-bottom: 20px;
     border: 1px solid transparent;
 }
